Wiki, revisions: Prevent revisions to wrap into a new line
Needs still no fixed width.

--- a/inyoka_theme_ubuntuusers/static/style/wiki.less
+++ b/inyoka_theme_ubuntuusers/static/style/wiki.less
@@ -96,10 +96,9 @@ table.revisions {
     }
   }
   .actions {
+    white-space: nowrap;
     a {
-      float: right;
-      display: block;
-      margin: 0 4px 0 0;
+      display: inline-block;
       width: 24px;
       height: 24px;
       background-position: center center;
